--- a/TC.ipynb
+++ b/TC.ipynb
@@ -14,7 +14,7 @@
       "cell_type": "markdown",
       "source": [
         "**TC.ipynb Description:**\n",
-        "Model utilizing the bert-base-uncased Transformer trained on arguments.tsv and evaluated using the same subset of arguments.tsv as the other models."
+        "Model utilizing the bert-base-uncased Transformer trained, validated and evaluated on arguments.tsv."
       ],
       "metadata": {
         "id": "Rjg_vvXWm5rn"
